# OpenAIWorkshop

./: .gitignore  .gitmodules  .lycheeignore  ARCHITECTURE.md  DATA.md  README.md  README_MCP_SECURITY.md  SCENARIO.md  SETUP.md  SETUP_UV.md  test_magentic_callback.py
.devcontainer/: devcontainer.json
.github/workflows/: documentation-checks.yml
agentic_ai/agents/: base_agent.py
agentic_ai/agents/agent_framework/: README.md  single_agent.py  state_management.md  utils.py
agentic_ai/agents/agent_framework/multi_agent/: HANDOFF_README.md  MAGENTIC_README.md  handoff_multi_domain_agent.py  magentic_flow.md  magentic_group.py  reflection_agent.py
agentic_ai/agents/autogen/durable_agent/: README.md  loop_agent.py
agentic_ai/agents/autogen/multi_agent/: collaborative_multi_agent_round_robin.py  collaborative_multi_agent_selector_group.py  handoff_multi_domain_agent.py  reflection_agent.py
agentic_ai/agents/autogen/single_agent/: loop_agent.py  loop_agent_progress.py
agentic_ai/agents/semantic_kernel/multi_agent/: collaborative_multi_agent.py  collaborative_multi_agent_RR.py  collaborative_multi_agent_wo_BA.py  handoff_multi_agent.py  magentic_agent.py  reflection_agent.py
agentic_ai/agents/semantic_kernel/single_agent/: chat_agent.py
agentic_ai/applications/: .env.sample  apim_inbound_policy.xml  backend.py  chainlit_app.py  frontend.py  frontend_magentic.py  msal_streamlit.py  pyproject.toml  requirements.txt  run_application.sh  run_application_uv.bat  run_applications_uv.sh  utils.py
agentic_ai/applications/react-frontend/: README.md  package-lock.json  package.json
agentic_ai/applications/react-frontend/public/: index.html
agentic_ai/applications/react-frontend/src/: App.js
agentic_ai/backend_services/: Dockerfile.mcp  mcp_service.py  requirements.txt
agentic_ai/backend_services/data/: contoso.db
agentic_ai/scenarios/durable_agent/: loop_agent.py
agentic_ai/scenarios/progress_update/: frontend.py
agentic_ai/workflow/: .env.sample  ARCHITECTURE.md  README.md  human-in-the-loop.md  pyproject.toml
agentic_ai/workflow/fraud_detection/: .env.sample  ARCHITECTURE.md  DIAGRAMS.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  backend.py  fraud_detection_workflow.py  pyproject.toml  scenario.md  start_backend.bat
agentic_ai/workflow/fraud_detection/ui/: index.html  package-lock.json  package.json  vite.config.js
agentic_ai/workflow/fraud_detection/ui/src/: App.jsx  index.css
agentic_ai/workflow/fraud_detection/ui/src/components/: AnalystDecisionPanel.jsx  ControlPanel.jsx  CustomNode.jsx  EventLog.jsx  WorkflowVisualizer.jsx
agentic_ai/workflow/fraud_detection/ui/src/hooks/: useWebSocket.js
docs/: 01_mcp_pip.md  01_mcp_uv.md  02_backend_pip.md  02_backend_uv.md  03_frontend_react.md  03_frontend_streamlit_pip.md  03_frontend_streamlit_uv.md  04_how_it_works.md
mcp/: .env.sample  Dockerfile.mcp  Dockerfile_agentic.mcp  MULTI_TENANT_MCP_SECURITY.md  README.md  apim_inbound_policy.xml  architecture.md  contoso_tools.py  deploy_azure.sh  general_mcp_security.md  mcp_architecture.md  mcp_service.py  mcp_service_agentic.py  pyproject.toml  requirements.txt
mcp/data/: contoso.db
