[project]
name = "applications"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework",
    "autogen-agentchat==0.7.1",
    "autogen-ext[mcp]==0.7.1",
    "azure-cosmos==4.9.0",
    "fastapi==0.115.12",
    "flasgger==0.9.7.1",
    "flask==3.0.3",
    "httpx==0.28.1",
    "msal==1.31.0",
    "openai>=1.99.0",
    "pydantic==2.11.4",
    "python-dotenv>=1.1.1",
    "requests==2.32.4",
    "semantic-kernel==1.35.0",
    "streamlit==1.45.0",
    "tenacity==8.5.0",
    "uvicorn>=0.25.0",
    "websockets>=15.0.1",
]

[tool.uv]
prerelease = "allow"
